# tuf-on-a-plane

./: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml
src/tuf_on_a_plane/: config.py  download.py  exceptions.py  readers.py  repository.py  writers.py
src/tuf_on_a_plane/models/: common.py  metadata.py
src/tuf_on_a_plane/parsers/: __init__.py  json.py
tests/: test_repository.py
tests/data/repository/metadata/: root.json
tests/data/repository/metadata/current/: root.json
